--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,6 +50,7 @@
         android:textSize="17sp"/>
 
     <TextView
+        android:id="@+id/saModuleTvId"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -58,11 +59,12 @@
         android:padding="8dp"
         android:background="@color/teal_700"
         app:background="?attr/selectableItemBackgroundBorderless"
-        android:text="Implemented Next"
+        android:text="Sales Assistant Module"
         android:textColor="@color/white"
         android:textSize="17sp"/>
 
     <TextView
+        android:id="@+id/roomCRUDId"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -71,7 +73,7 @@
         android:padding="8dp"
         android:background="@color/teal_700"
         app:background="?attr/selectableItemBackgroundBorderless"
-        android:text="Implemented Next"
+        android:text="Room CRUD"
         android:textColor="@color/white"
         android:textSize="17sp"/>
 
