--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -87,6 +87,7 @@
                 app:background="?attr/selectableItemBackgroundBorderless" />
 
             <TextView
+                android:id="@+id/posPrintId"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
@@ -94,7 +95,7 @@
                 android:layout_marginEnd="10dp"
                 android:background="@color/teal_700"
                 android:padding="8dp"
-                android:text="@string/implemented_next"
+                android:text="@string/pos_print"
                 android:textColor="@color/white"
                 android:textSize="17sp"
                 app:background="?attr/selectableItemBackgroundBorderless" />
