--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -101,6 +101,7 @@
                 app:background="?attr/selectableItemBackgroundBorderless" />
 
             <TextView
+                android:id="@+id/loginTV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
@@ -108,7 +109,7 @@
                 android:layout_marginEnd="10dp"
                 android:background="@color/teal_700"
                 android:padding="8dp"
-                android:text="@string/implemented_next"
+                android:text="@string/login"
                 android:textColor="@color/white"
                 android:textSize="17sp"
                 app:background="?attr/selectableItemBackgroundBorderless" />
