--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -115,6 +115,7 @@
                 app:background="?attr/selectableItemBackgroundBorderless" />
 
             <TextView
+                android:id="@+id/saTvId"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
@@ -122,7 +123,7 @@
                 android:layout_marginEnd="10dp"
                 android:background="@color/teal_700"
                 android:padding="8dp"
-                android:text="@string/implemented_next"
+                android:text="Sa Module"
                 android:textColor="@color/white"
                 android:textSize="17sp"
                 app:background="?attr/selectableItemBackgroundBorderless" />
