--- a/app/src/main/res/layout/activity_sa_test.xml
+++ b/app/src/main/res/layout/activity_sa_test.xml
@@ -11,12 +11,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:weightSum="9">
+        android:weightSum="13">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="7">
+            android:layout_weight="9.5">
 
             <ScrollView
                 android:layout_width="match_parent"
@@ -499,6 +499,7 @@
                                 android:id="@+id/mdMSGId"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_gravity="center"
                                 android:ellipsize="marquee"
                                 android:singleLine="true"
                                 android:focusable="true"
@@ -524,13 +525,12 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="2"
+            android:layout_weight="3.5"
             android:orientation="vertical">
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/layout_bg_1">
+                android:layout_height="wrap_content">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -663,6 +663,55 @@
                         android:text="Show Previous Month"
                         android:textColor="@color/white"
                         android:textSize="16dp" />
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="2dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginBottom="5dp"
+                        app:cardCornerRadius="9dp"
+                        app:cardElevation="2dp">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            android:weightSum="8"
+                            android:paddingTop="5dp"
+                            android:paddingBottom="5dp">
+
+                            <TextView
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="2"
+                                android:background="@drawable/layout_bg_1"
+                                android:layout_gravity="center"
+                                android:gravity="center"
+                                android:text="Special Note"
+                                android:textColor="@color/md_red_800"
+                                android:textSize="15sp" />
+
+                            <TextView
+                                android:id="@+id/mdMSG1Id"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="6"
+                                android:ellipsize="marquee"
+                                android:singleLine="true"
+                                android:focusable="true"
+                                android:clickable="true"
+                                android:focusableInTouchMode="true"
+                                android:marqueeRepeatLimit="marquee_forever"
+                                android:scrollHorizontally="true"
+                                android:text="সবাইকে ঈদুল ফিতরের অনেক অনেক শুভেচ্ছা। সবাই ভালোভাবে ঈদ উদযাপন করো"
+                                android:textColor="@color/black"
+                                android:textSize="15sp" />
+
+                        </LinearLayout>
+
+                    </androidx.cardview.widget.CardView>
 
                 </LinearLayout>
 
