--- a/app/src/main/res/values-v21/themes.xml
+++ b/app/src/main/res/values-v21/themes.xml
@@ -9,4 +9,10 @@
 <!--        <item name="android:statusBarColor">@android:color/transparent</item>-->
         <item name="drawerArrowStyle">@style/DrawerColor</item>
     </style>
+
+    <style name="modifiedEditText" parent="parent">
+        <item name="android:textSize">@dimen/newsMoreTextSize</item>
+        <item name="android:backgroundTint">@color/primaryTextColor</item>
+    </style>
+
 </resources>
