login 2 to PartnerListRViewActivity with recyclerview added

--- a/app/src/main/res/layout/activity_login2.xml
+++ b/app/src/main/res/layout/activity_login2.xml
@@ -96,6 +96,7 @@
         </RelativeLayout>
 
         <TextView
+            android:id="@+id/loginBtnId"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="62dp"
