--- a/app/src/main/res/layout/activity_sa_test.xml
+++ b/app/src/main/res/layout/activity_sa_test.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".SaTestActivity">
 
     <LinearLayout
@@ -16,7 +15,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="9.5">
+            android:layout_weight="9.1">
 
             <ScrollView
                 android:layout_width="match_parent"
@@ -525,7 +524,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="3.5"
+            android:layout_weight="3.9"
             android:orientation="vertical">
 
             <RelativeLayout
@@ -722,4 +721,4 @@
 
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
