--- a/app/src/main/res/layout/activity_sa_test.xml
+++ b/app/src/main/res/layout/activity_sa_test.xml
@@ -12,10 +12,26 @@
         android:orientation="vertical"
         android:weightSum="13">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="9.1">
+
+            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+                android:id="@+id/extended_fab"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="30dp"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:text="Previous Month"
+                android:textColor="@color/white"
+                app:icon="@drawable/back_fab2"
+                app:iconTint="@color/white"
+                app:backgroundTint="#B2DA0505"
+                app:rippleColor="@color/md_red_900"
+                />
 
             <ScrollView
                 android:layout_width="match_parent"
@@ -519,7 +535,7 @@
             </ScrollView>
 
 
-        </LinearLayout>
+        </RelativeLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
