--- a/app/src/main/res/layout/activity_sa_test.xml
+++ b/app/src/main/res/layout/activity_sa_test.xml
@@ -25,6 +25,7 @@
                 android:layout_marginBottom="30dp"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentBottom="true"
+                android:gravity="center"
                 android:text="Previous Month"
                 android:textColor="@color/white"
                 app:icon="@drawable/back_fab2"
