--- a/app/src/main/res/layout/activity_login3.xml
+++ b/app/src/main/res/layout/activity_login3.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".login.LoginActivity3"
     android:layout_gravity="center"
     android:background="@color/login_bk_color"
     android:focusableInTouchMode="true"
-    android:gravity="center">
+    android:gravity="center"
+    tools:context=".login.LoginActivity3">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -32,14 +32,14 @@
                     style="@style/viewParent.headerText.NoMode"
                     android:layout_alignParentLeft="true"
                     android:layout_centerVertical="true"
-                    android:text="Already\nhave an \nAccount?"/>
+                    android:text="Already\nhave an \nAccount?" />
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentRight="true"
-                    android:src="@drawable/l3_register_hero"/>
+                    android:src="@drawable/l3_register_hero" />
 
             </RelativeLayout>
 
@@ -53,7 +53,7 @@
                     style="@style/modifiedEditText"
                     android:hint="@string/login_email_hint"
                     android:inputType="textEmailAddress"
-                    android:maxLines="1"/>
+                    android:maxLines="1" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -67,7 +67,7 @@
                     style="@style/modifiedEditText"
                     android:hint="@string/login_password_hint"
                     android:inputType="textPassword"
-                    android:maxLines="1"/>
+                    android:maxLines="1" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -77,7 +77,7 @@
                 android:layout_marginTop="10dp"
                 android:text="Forgot Password?"
                 android:textColor="@color/primaryTextColor"
-                android:textSize="@dimen/newsMoreTextSize"/>
+                android:textSize="@dimen/newsMoreTextSize" />
 
             <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                 android:id="@+id/cirLoginBtn"
@@ -88,7 +88,7 @@
                 app:initialCornerAngle="27dp"
                 app:spinning_bar_color="#FFFFFF"
                 app:spinning_bar_padding="6dp"
-                app:spinning_bar_width="4dp"/>
+                app:spinning_bar_width="4dp" />
 
             <TextView
                 style="@style/parent"
@@ -98,7 +98,7 @@
                 android:textAlignment="center"
                 android:textColor="@color/themeColor"
                 android:textSize="17sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -111,7 +111,7 @@
                     android:layout_width="0dp"
                     android:layout_height="1dp"
                     android:layout_weight="3"
-                    android:background="@color/colorPrimaryDark"/>
+                    android:background="@color/colorPrimaryDark" />
 
                 <TextView
                     style="@style/viewParent.headerText.NoMode"
@@ -120,13 +120,13 @@
                     android:layout_weight="6"
                     android:text="Use Other Methods"
                     android:textAlignment="center"
-                    android:textSize="12sp"/>
+                    android:textSize="12sp" />
 
                 <View
                     android:layout_width="0dp"
                     android:layout_height="1dp"
                     android:layout_weight="3"
-                    android:background="@color/colorPrimaryDark"/>
+                    android:background="@color/colorPrimaryDark" />
 
             </LinearLayout>
 
@@ -139,13 +139,13 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/l3_facebook"/>
+                    android:src="@drawable/l3_facebook" />
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
-                    android:src="@drawable/l3_google_plus"/>
+                    android:src="@drawable/l3_google_plus" />
 
             </LinearLayout>
 
@@ -159,7 +159,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_marginTop="20dp"
-        android:background="@drawable/l3_side_bg"/>
+        android:background="@drawable/l3_side_bg" />
 
     <ImageView
         android:layout_width="wrap_content"
@@ -169,6 +169,6 @@
         android:layout_marginRight="11dp"
         android:layout_marginBottom="30dp"
         android:onClick="onLoginClick"
-        android:src="@drawable/l3_add_img"/>
+        android:src="@drawable/l3_add_img" />
 
 </RelativeLayout>
