--- a/app/src/main/res/layout/activity_login4.xml
+++ b/app/src/main/res/layout/activity_login4.xml
@@ -1,122 +1,131 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".login.LoginActivity4">
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".login.LoginActivity4">
+        android:orientation="vertical">
 
-        <LinearLayout
-            android:orientation="vertical"
+        <ImageView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <ImageView
-                android:layout_weight="4"
-                android:src="@drawable/l4_background"
-                android:scaleType="centerCrop"
-                android:layout_width="match_parent"
-                android:layout_height="0dp" />
-            <View
-                android:layout_weight="1"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"/>
-        </LinearLayout>
+            android:layout_height="0dp"
+            android:layout_weight="4"
+            android:scaleType="centerCrop"
+            android:src="@drawable/l4_background" />
 
-
-        <LinearLayout
-            android:gravity="center"
+        <View
             android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_margin="?actionBarSize"
+            android:text="Sign in"
+            android:textColor="#fff"
+            android:textSize="40sp"
+            android:textStyle="bold" />
 
-            <TextView
-                android:layout_margin="?actionBarSize"
-                android:textStyle="bold"
-                android:textSize="40sp"
-                android:textColor="#fff"
-                android:text="Sign in"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="?actionBarSize"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/rounded_corner"
+            android:hint="Email"
+            android:paddingStart="10dp"
+            android:paddingLeft="10dp"
+            android:textColor="#fff"
+            android:textColorHint="#eee"
+            android:textSize="17sp" />
 
-            <EditText
-                android:textColor="#fff"
-                android:textColorHint="#eee"
-                android:paddingStart="10dp"
-                android:paddingLeft="10dp"
-                android:hint="Email"
-                android:layout_marginTop="20dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginBottom="10dp"
-                android:layout_width="match_parent"
-                android:layout_height="?actionBarSize"
-                android:background="@drawable/rounded_corner"
-                android:textSize="17sp" />
-            <EditText
-                android:textColor="#fff"
-                android:textColorHint="#eee"
-                android:paddingStart="10dp"
-                android:paddingLeft="10dp"
-                android:hint="Password"
-                android:inputType="textPassword"
-                android:layout_marginTop="10dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginBottom="15dp"
-                android:layout_width="match_parent"
-                android:layout_height="?actionBarSize"
-                android:background="@drawable/rounded_corner"
-                android:textSize="17sp" />
-            <Button
-                android:paddingRight="20dp"
-                android:paddingLeft="20dp"
-                android:background="@drawable/blue_border_rounded_cornwe"
-                android:text="sign in"
-                android:textColor="#777"
-                android:layout_width="wrap_content"
-                android:layout_height="35dp" />
-            <TextView
-                android:layout_marginTop="20dp"
-                android:textColor="#fff"
-                android:text="Forgot Password?"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="?actionBarSize"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="15dp"
+            android:background="@drawable/rounded_corner"
+            android:hint="Password"
+            android:inputType="textPassword"
+            android:paddingStart="10dp"
+            android:paddingLeft="10dp"
+            android:textColor="#fff"
+            android:textColorHint="#eee"
+            android:textSize="17sp" />
 
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="35dp"
+            android:background="@drawable/blue_border_rounded_cornwe"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:text="sign in"
+            android:textColor="#777" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="Forgot Password?"
+            android:textColor="#fff" />
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="30dp"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:text="Or Signup with" />
 
         <LinearLayout
-            android:layout_marginBottom="30dp"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:layout_alignParentBottom="true"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
-            <TextView
-                android:layout_marginBottom="10dp"
-                android:text="Or Signup with"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-                <ImageButton
-                    android:layout_marginRight="15dp"
-                    android:background="@drawable/l4_google"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp" />
-                <ImageButton
-                    android:layout_marginRight="15dp"
-                    android:background="@drawable/l4_facebook"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp" />
-                <ImageButton
-                    android:background="@drawable/l4_twitter"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp" />
-            </LinearLayout>
+            <ImageButton
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginRight="15dp"
+                android:background="@drawable/l4_google" />
 
+            <ImageButton
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginRight="15dp"
+                android:background="@drawable/l4_facebook" />
 
+            <ImageButton
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:background="@drawable/l4_twitter" />
         </LinearLayout>
 
-    </RelativeLayout>
+
+    </LinearLayout>
+
+</RelativeLayout>
