--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -128,6 +128,20 @@
                 android:textSize="17sp"
                 app:background="?attr/selectableItemBackgroundBorderless" />
 
+            <TextView
+                android:id="@+id/mapTvId"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:background="@color/teal_700"
+                android:padding="8dp"
+                android:text="Google Maps"
+                android:textColor="@color/white"
+                android:textSize="17sp"
+                app:background="?attr/selectableItemBackgroundBorderless" />
+
         </LinearLayout>
 
     </ScrollView>
