--- a/app/src/main/res/layout/activity_bottom_navigation_ui_list.xml
+++ b/app/src/main/res/layout/activity_bottom_navigation_ui_list.xml
@@ -53,7 +53,7 @@
                 android:layout_marginEnd="10dp"
                 android:background="@color/teal_700"
                 android:padding="8dp"
-                android:text="Log in 3"
+                android:text="Material Bottom Nav Fragment test"
                 android:textColor="@color/white"
                 android:textSize="17sp"
                 app:background="?attr/selectableItemBackgroundBorderless" />
