--- a/app/src/main/res/layout/activity_material_bottom_nav.xml
+++ b/app/src/main/res/layout/activity_material_bottom_nav.xml
@@ -6,7 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".bottomNavigation.MaterialBottomNavActivity">
 
+    <FrameLayout
+        android:id="@+id/main_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/bottom_nav_Id" />
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_nav_Id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
