--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -169,6 +169,26 @@
                 android:textSize="17sp"
                 app:background="?attr/selectableItemBackgroundBorderless" />
 
+            <TextView
+                android:id="@+id/deviceInfoTvId"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:background="@color/teal_700"
+                android:padding="8dp"
+                android:text="Device Info"
+                android:textColor="@color/white"
+                android:textSize="17sp"
+                app:background="?attr/selectableItemBackgroundBorderless" />
+
+<!--            <TextView-->
+<!--                android:id="@+id/commaStringId"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_margin="10dp"/>-->
+
         </LinearLayout>
 
     </ScrollView>
