--- a/app/src/main/res/layout/activity_ocractivity.xml
+++ b/app/src/main/res/layout/activity_ocractivity.xml
@@ -27,4 +27,11 @@
         android:layout_marginTop="20dp"
         android:layout_gravity="center"/>
 
+    <ImageView
+        android:id="@+id/imageId"
+        android:layout_width="400dp"
+        android:layout_height="400dp"
+        android:scaleType="centerCrop"
+        android:layout_marginTop="10dp"/>
+
 </LinearLayout>
