--- a/app/src/main/res/layout/activity_expandable_card.xml
+++ b/app/src/main/res/layout/activity_expandable_card.xml
@@ -91,7 +91,7 @@
                     android:id="@+id/arrow_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_baseline_expand_more_24"
+                    android:src="@drawable/down_arrow"
                     app:layout_constraintBottom_toBottomOf="@id/fixed_layout"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.802"
