--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -211,6 +211,20 @@
                 android:textColor="@color/white"
                 android:textSize="17sp"
                 app:background="?attr/selectableItemBackgroundBorderless" />
+
+            <TextView
+                android:id="@+id/expandableCardTvId"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:background="@color/teal_700"
+                android:padding="8dp"
+                android:text="Expandable Card"
+                android:textColor="@color/white"
+                android:textSize="17sp"
+                app:background="?attr/selectableItemBackgroundBorderless" />
 <!--            <TextView-->
 <!--                android:id="@+id/commaStringId"-->
 <!--                android:layout_width="wrap_content"-->
